bdr.BDR.scala.error
Erreur de compilation :
BDR:23: error: Unmatched closing brace '}' ignored here
  fin=true}
          ^